[package]
name = "gitqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
dirs = "5.0.1"
dunce = "1.0.4"
glob = "0.3.1"
log = "0.4.22"
rusqlite = {version = "0.31.0", features = ["bundled"]}
rust-ini = "0.21.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sha1 = "0.10.6"
tempfile = "3.10.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ignore_bench"
harness = false